[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "fund-exposure-lookthrough"
version = "0.4.0"
description = "Zero-dependency static fund look-through exposure analysis CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SergioYin" }]
keywords = ["portfolio", "funds", "exposure", "look-through", "finance-research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SergioYin/fund-exposure-lookthrough"
Source = "https://github.com/SergioYin/fund-exposure-lookthrough"

[project.scripts]
fund-exposure-lookthrough = "fund_exposure_lookthrough.cli:main"

[tool.setuptools.package-data]
fund_exposure_lookthrough = ["data/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
